--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name="mick.studio.donationx.main.DonationXApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,7 +13,10 @@
         android:theme="@style/Theme.DonationX"
         tools:targetApi="31">
         <activity
-            android:name=".Donate"
+            android:name=".activities.Report"
+            android:exported="false" />
+        <activity
+            android:name=".activities.Donate"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
