--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.DonationX"
         tools:targetApi="31">
         <activity
-            android:name=".activities.Report"
-            android:exported="false" />
-        <activity
-            android:name=".activities.Donate"
+            android:name=".activities.Home"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,5 +22,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
